--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,6 +1,6 @@
 .root {
   border: none;
-  background: #73d677;
+  background: #f2cb07;
   box-shadow: inset 0 -9px 0 rgba(0, 0, 0, 0.18);
   border-radius: 14px;
   height: 66px;
@@ -19,10 +19,14 @@
   }
 }
 
-.yellowButton {
+.yellow {
   background: #f2cb07;
 }
 
-.fullWidth {
+.green {
+  background: #73d677;
+}
+
+.large {
   width: 100%;
 }
