--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,6 +5,8 @@
   justify-content: center;
   height: 93px;
   align-items: center;
+  background: #f5db13;
+  box-shadow: 0px 4px 16px rgba(1, 28, 64, 0.2);
 }
 
 .wrap {
