--- a/src/Pages/PokedexPage/PokedexPage.module.scss
+++ b/src/Pages/PokedexPage/PokedexPage.module.scss
@@ -22,3 +22,19 @@
 .bold {
   font-weight: bold;
 }
+
+.input {
+  text-align: center;
+  width: 100%;
+  margin-bottom: 100px;
+}
+
+input {
+  width: 70%;
+  background: linear-gradient(180deg, #ffffff 30.32%, #f5f5f5 100%);
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  height: 40px;
+  box-shadow: 6px 11px 27px -8px rgba(0, 0, 0, 0.75);
+}
